[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vi_algorithm"
version = "0.0"
maintainers = [
  { name="Joseph Guntrip", email="j.guntrip@lancaster.ac.uk" },
]
authors = [
  { name="Joseph Guntrip", email="j.guntrip@lancaster.ac.uk"},
]
description = "Value iteration algorithm for finding optimal policy of MDPs"
requires-python = ">=3.13.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]

[project.urls]
homepage = "https://github.com/jguntrip42/value_iteration_project"
